WS embedded testing: add basic SOAP test for WPS