@@ -1113,6 +1113,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <useSystemClassLoader>true</useSystemClassLoader>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                 </configuration>
             </plugin>
             <plugin>
